# Umbra-ShaderCompiler

./: CMakeLists.txt  README.md  license.txt
.github/workflows/: ci.yml
Example/: CPP_Example.cpp  C_Example.c  c_example.cmake  cpp_example.cmake
Include/Umbra/: ShaderBase.h  ShaderCompiler.h  ShaderCompilerCAPI.h
Source/Umbra/: ShaderCompiler.cpp  ShaderCompilerCAPI.cpp
